# vectoracious

./: Cargo.toml  V2D_FORMAT.md  regen_bindings.sh  todo.org
src/: batch.rs  color.rs  lib.rs  model.rs  render.rs  text.rs
src/render/: gl32.rs  glerr.rs
src/render/gl32/: binding.rs  blit.frag  blit.vert  blit_smooth.frag  bloom.frag  bwm.frag  bwm_smooth.frag  downsample.frag  dwm.frag  merge.frag  mergeup.frag  model.frag  model.glsl  model.vert  text.frag  text.glsl  text.vert  upmergeup.frag  vert.glsl
