[package]
name = "vectoracious"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.31.3"
log = "0.4"
half = {version = "1.8.2", features = ["use-intrinsics", "std"]}
libc = "0.2.116"
sdl2 = "0.35.1"
sdl2-sys = "*"
anyhow = "1.0"
psilo-text = {path = "../psilo-text"}
rustybuzz = "0.4.0"
backtrace = "0.3.64"
